--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -32,12 +32,12 @@ jobs:
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.AUR_SSH_PRIVATE_KEY }}
+          ssh-private-key: ${{ secrets.RUNA_AUR_SSH }}
 
       - name: Import GPG Key
         uses: crazy-max/ghaction-import-gpg@v6
         with:
-          gpg_private_key: ${{ secrets.RUNA_CI_GPG_KEY }}
+          gpg_private_key: ${{ secrets.RUNA_CI_GPG }}
           git_user_signingkey: true
           git_commit_gpgsign: true
 
