--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -36,7 +36,15 @@ jobs:
             sudo -u builduser makepkg --printsrcinfo > .SRCINFO
 
             chown -R 1001:1001 /pkg
+
+            echo "--- RESULTING PKGBUILD ---"
+            cat PKGBUILD
+            echo "--- RESULTING .SRCINFO ---"
+            cat .SRCINFO
+
           "
+          echo "--- GIT STATUS ---"
+          git diff
 
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
@@ -50,20 +58,20 @@ jobs:
           git_user_signingkey: true
           git_commit_gpgsign: true
 
-      - name: Sync and Push
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan aur.archlinux.org >> ~/.ssh/known_hosts
-
-          git clone "ssh://aur@aur.archlinux.org/runa.git" aur_clone
-          cp PKGBUILD .SRCINFO aur_clone/
-          cd aur_clone
-          git config user.name "runa CI (CI automation)"
-          git config user.email "runa-ci@proton.me"
-          git add PKGBUILD .SRCINFO
-          if git diff --quiet && git diff --staged --quiet; then
-            echo "No changes detected."
-          else
-            git commit -S -m "Update to ${{ github.event.inputs.tag }} via GitHub Actions"
-            git push origin master
-          fi
+      # - name: Sync and Push
+      #   run: |
+      #     mkdir -p ~/.ssh
+      #     ssh-keyscan aur.archlinux.org >> ~/.ssh/known_hosts
+      #
+      #     git clone "ssh://aur@aur.archlinux.org/runa.git" aur_clone
+      #     cp PKGBUILD .SRCINFO aur_clone/
+      #     cd aur_clone
+      #     git config user.name "runa CI (CI automation)"
+      #     git config user.email "runa-ci@proton.me"
+      #     git add PKGBUILD .SRCINFO
+      #     if git diff --quiet && git diff --staged --quiet; then
+      #       echo "No changes detected."
+      #     else
+      #       git commit -S -m "Update to ${{ github.event.inputs.tag }} via GitHub Actions"
+      #       git push origin master
+      #     fi
