--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -19,32 +19,30 @@ jobs:
 
       - name: Update PKGBUILD and Generate .SRCINFO
         run: |
-          CLEAN_VER=$(echo "${{ github.event.inputs.tag }}" | sed 's/^v//;s/^\.//')
-          echo "Target version: $CLEAN_VER"
+          CLEAN_VER=$(echo "${{ github.event.inputs.tag }}" | sed 's/^v//;s/^v\.//')
 
-          docker run --rm \
-            -v "$(pwd)/arch:/pkg" \
-            -w /pkg \
-            -e CLEAN_VER="$CLEAN_VER" \
-            archlinux:latest bash -c "
-              set -e
+          docker run --rm -v "$PWD/arch:/pkg" -w /pkg archlinux:latest bash -c "
+            set -e
+            pacman -Sy --noconfirm pacman-contrib sudo
+            useradd -m builduser
+            echo 'builduser ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+            chown -R builduser:builduser /pkg
 
-              pacman -Sy --noconfirm pacman-contrib sudo
+            sed -i \"s/^pkgver=.*/pkgver=\$CLEAN_VER/\" PKGBUILD
+            sed -i \"s/^pkgrel=.*/pkgrel=1/\" PKGBUILD
 
-              useradd -m builduser
-              echo 'builduser ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
+            sudo -u builduser updpkgsums
 
-              chown -R builduser:builduser /pkg
+            sudo -u builduser makepkg --printsrcinfo > .SRCINFO
 
-              sed -i \"s/^pkgver=.*/pkgver=\$CLEAN_VER/\" PKGBUILD
-              sed -i \"s/^pkgrel=.*/pkgrel=1/\" PKGBUILD
+            chown -R 1001:1001 /pkg
 
-              sudo -u builduser updpkgsums
+            echo "--- RESULTING PKGBUILD ---"
+            cat PKGBUILD
+            echo "--- RESULTING .SRCINFO ---"
+            cat .SRCINFO
 
-              sudo -u builduser makepkg --printsrcinfo > .SRCINFO
-
-              chown -R 1001:1001 /pkg
-            "
+          "
 
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
