--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -17,32 +17,6 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Update PKGBUILD and Generate .SRCINFO
-        run: |
-          CLEAN_VER=$(echo "${{ github.event.inputs.tag }}" | sed 's/^v//;s/^\.//')
-          echo "Target version is: $CLEAN_VER"
-
-          docker run --rm \
-            -v "$(pwd)/arch:/pkg" \
-            -w /pkg \
-            -e CLEAN_VER="$CLEAN_VER" \
-            archlinux:latest bash -c "
-              set -e
-              pacman -Sy --noconfirm pacman-contrib sudo
-
-              useradd -m builduser
-              echo 'builduser ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers
-              chown -R builduser:builduser /pkg
-
-              sed -i \"s/^pkgver=.*/pkgver=\$CLEAN_VER/\" PKGBUILD
-              sed -i \"s/^pkgrel=.*/pkgrel=1/\" PKGBUILD
-
-              sudo -u builduser updpkgsums
-              sudo -u builduser makepkg --printsrcinfo > .SRCINFO
-
-              chown -R 1001:1001 /pkg
-            "
-
       - name: Setup SSH Agent
         uses: webfactory/ssh-agent@v0.9.0
         with:
@@ -55,7 +29,7 @@ jobs:
           git_user_signingkey: true
           git_commit_gpgsign: true
 
-      - name: Sync and Push
+      - name: Push
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan aur.archlinux.org >> ~/.ssh/known_hosts
