chore: added aarch64 back

--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=runa
 pkgver=0.7.0
 pkgrel=1
 pkgdesc="A fast and lightweight terminal file manager written in Rust"
-arch=('x86_64')
+arch=('x86_64' 'aarch64')
 url="https://github.com/alexm-dev/runa"
 license=('MIT' 'Apache-2.0')
 depends=('gcc-libs')
