chore: updated maintainer email

--- a/arch/PKGBUILD
+++ b/arch/PKGBUILD
@@ -1,4 +1,4 @@
-# Maintainer: Alexandros McCray <runa-dev at proton dot me>
+# Maintainer: Alexandros McCray <alexandros dot mc at proton dot me>
 # Contributor: Luis Martinez <luis dot martinez at disroot dot org>
 
 pkgname=runa
